[package]
name = "liquid-staking"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-erc20 = { git = "https://github.com/casper-ecosystem/erc20" }
casper-types = "1.5.0"

[[bin]]
name = "liquid_staking_hub"
path = "src/liquid_staking_hub.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "pre_deposit"
path = "src/pre_deposit.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "lcspr_erc20"
path = "src/lcspr_erc20.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "validators_list"
path = "src/validators_list.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
