[package]
authors = ["Zhan Ganiev <zhan.boolean@icloud.com>"]
name = "liquid-staking-validators-whitelist"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = {path = "../../utils/contract-utils"}

[[bin]]
name = "validators_whitelist"
path = "src/validators_whitelist.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

[features]
default = ["casper-contract/std", "casper-types/std"]