[package]
authors = ["Zhan Ganiev <zhan.boolean@icloud.com>"]
name = "contract-public-key-delegation"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
rand = { version = "0.8.5", features = ["js"] }
ed25519-dalek = "1.0.1"

[[bin]]
name = "contract_public_key_delegation"
path = "src/contract_public_key_delegation.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]