[package]
name = "casper-erc1820"
version = "0.1.0"
description = "A library for using ERC820Registry"
readme = "README.md"

[dependencies]
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
casper-contract = "1.3.2"
casper-types = "1.3.2"
hex = { version = "0.4.3", default-features = false }
once_cell = { version = "1.8.0", default-features = false }

[features]
default = ["std"]
std = ["casper-contract/std", "casper-types/std"]