[package]
name = "reward-dispatcher"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-erc20 = { git = "https://github.com/casper-ecosystem/erc20" }
casper-types = "1.5.0"

[[bin]]
name = "liquid_CSPR_staking_reward_dispatcher"
path = "src/lcspr_reward_dispatcher.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true